<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <TextView
        android:id="@+id/activityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        android:text="@string/add_book_here"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_name_textField"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_book"
        app:layout_constraintTop_toBottomOf="@+id/activityText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_author"
        app:startIconDrawable="@drawable/ic_person"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_pages"
        app:startIconDrawable="@drawable/ic_numbers"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/addBookBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout2"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBookPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addBookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        android:text="@string/add_book"
        app:layout_constraintEnd_toEndOf="@+id/editTextLayout3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextLayout3"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout3" />

    <Button
        android:id="@+id/updateBookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:minHeight="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/update_book_btn"
        app:layout_constraintEnd_toEndOf="@+id/addBookBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addBookBtn"
        app:layout_constraintTop_toBottomOf="@+id/addBookBtn" />


    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_your_all_fav"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateBookBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>