<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardViewLayout"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:paddingBottom="5dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookPages"
            app:layout_constraintVertical_bias="0.466">

            <ImageButton
                android:id="@+id/shareBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="7dp"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/share_book_to_anyone"
                android:src="@drawable/ic_share" />

            <ImageButton
                android:id="@+id/deleteBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:padding="48dp"
                android:layout_marginTop="-5dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/button_delete_book_forever"
                android:src="@drawable/ic_delete" />

        </LinearLayout>

        <TextView
            android:id="@+id/bookId"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/circle"
            android:text="01"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="-14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bookId"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/bookId"
                app:layout_constraintStart_toEndOf="@+id/bookId"
                app:layout_constraintTop_toTopOf="@+id/bookId"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="0dp"
                android:paddingBottom="5dp"
                android:text="@string/book_author_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/purple_500"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="-8dp"
            android:paddingEnd="4dp"
            android:text="@string/page_count"
            android:textColor="@color/purple_500_50"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285" />

        <TextView
            android:id="@+id/bookPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="30dp"
            android:text="250"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>